--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.4.2",
     "react-hammerjs": "^1.0.1",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "^1.1.4",
     "redux": "^3.7.2",
